--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.8",
     "formik": "^2.2.6",
+    "formik-material-fields": "0.0.6",
     "formik-material-ui": "^3.0.1",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
