--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.10.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.8",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "formik": "^2.2.6",
     "formik-material-fields": "0.0.6",
     "formik-material-ui": "^3.0.1",
